--- a/main.tex
+++ b/main.tex
@@ -264,11 +264,11 @@ existieren mit folgenden Eigenschaften:
 }
 
 \dfn{Reelles Skalarprodukt}{
-Sei \(V\) ein Vektorraum über \(\KK = \RR\). Dann nennt man \(\langle\cdot,\cdot\rangle\colon V \times V \to \RR\) mit den Eigenschaften \((1)_{S\RR}\) - \((3)_{S\RR}\) ein (reelles) Skalarprodukt auf \(V\).
+Sei \(V\) ein Vektorraum über \(\KK = \RR\). Dann nennt man \(\langle\cdot,\cdot\rangle\colon V \times V \to \RR\) mit den Eigenschaften \((1)_{S\RR}\text{--}(3)_{S\RR}\) ein (reelles) Skalarprodukt auf \(V\).
 }
 
 \dfn{Komplexes Skalarprodukt}{
-	Sei \(V\) ein Vektorraum über \(\KK = \CC\). Dann nennt man \(\langle\cdot,\cdot\rangle\colon V \times V \to \CC\) mit den Eigenschaften \((1)_{S\CC}\) - \((3)_{S\CC}\) ein (komplexes) Skalarprodukt auf \(V\).
+	Sei \(V\) ein Vektorraum über \(\KK = \CC\). Dann nennt man \(\langle\cdot,\cdot\rangle\colon V \times V \to \CC\) mit den Eigenschaften \((1)_{S\CC}\text{--}(3)_{S\CC}\) ein (komplexes) Skalarprodukt auf \(V\).
 }
 
 \section{Metrische Räume}
