--- a/main.tex
+++ b/main.tex
@@ -1171,13 +1171,15 @@ Sei \(A = A^{\mathsf{T}}\) (falls \(\KK = \RR\)) bzw. \(A = A^*\) (falls \(\KK =
 \dfn{}{
 \(\KK = \RR\)\\
 Man nennt \(A \in M^n(\RR)\) orthogonal diagonalisierbar, genau dann, wenn eine orthogonale Matrix \(Y \in M^n(\RR)\) existiert, sodass
-\[Y^{\mathsf{T}} = Y^{-1}AY = \mathrm{diag}\Le\{\lambda_1, \hdots, \lambda_2\Ri\}.\]
+\[Y^{-1}AY = \mathrm{diag}\Le\{\lambda_1, \hdots, \lambda_2\Ri\}.\]
+Mit \(Y^{-1} = Y^{\mathsf{T}}\)
 }
 
 \dfn{}{
 \(\KK = \CC\)\\
 Man nennt \(A \in M^n(\CC)\) unitär diagonalisierbar, genau dann, wenn eine unitäre Matrix \(Y \in M^n(\CC)\) existiert, sodass
-\[Y^* = Y^{-1}AY = \mathrm{diag}\Le\{\lambda_1, \hdots, \lambda_2\Ri\}.\]
+\[Y^{-1}AY = \mathrm{diag}\Le\{\lambda_1, \hdots, \lambda_2\Ri\}.\]
+Mit \(Y^{-1} = Y^*\)
 }
 
 \thm{}{
