--- a/main.tex
+++ b/main.tex
@@ -1060,7 +1060,7 @@ lineare Hülle des Systems \(\{f_1,\hdots,f_k\}\)
 
 \thm{Dimensionssatz}{
 \(A \in M^{m,n}\)\\
-\[\dim{\core(A)} = \dim{W(A)} = \dim{\core(A)} + r(A) = n\]
+\[\dim{\core(A)} + \dim{W(A)} = \dim{\core(A)} + r(A) = n\]
 }
 
 \thm{}{
